# aoc

./: .gitignore  LICENSE
python/2022/: README.md  support.py
python/2022/day00/: part1.py
python/2022/day01/: part1.py  part2.py
python/2022/day02/: part1.py  part2.py
python/2022/day03/: part1.py  part2.py
python/2022/day04/: part1.py  part2.py
python/2022/day05/: part1.py  part2.py
python/2022/day06/: part1.py  part2.py
python/2022/day07/: part1.py  part2.py
python/2022/day08/: part1.py  part2.py
python/2022/day09/: part1.py  part2.py
python/2022/day10/: part1.py  part2.py
python/2022/day11/: part1.py  part2.py
python/2022/day12/: part1.py  part2.py
python/2022/day13/: part1.py  part2.py
python/2022/day14/: part1.py  part2.py
python/2022/day15/: part1.py  part2.py
python/2022/day16/: part1.py  part2.py
python/2022/day17/: part1.py  part2.py
python/2022/day18/: part1.py  part2.py
python/2022/day19/: part1.py  part2.py
python/2022/day20/: part1.py  part2.py
python/2022/day21/: part1.py  part2.py
python/2022/day22/: part1.py  part2.py
python/2022/day23/: part1.py  part2.py
python/2022/day24/: part1.py  part2.py
python/2022/day25/: part1.py
rust/2022/day01/: README.md
rust/2022/day01/src/: main.rs
rust/2022/day02/: README.md  main.rs
rust/2022/day02/src/: main.rs
rust/2022/day03/: README.md
rust/2022/day03/src/: main.rs
rust/2023/: .gitignore  Cargo.toml  README.md  justfile
rust/2023/daily-template/src/: part1.rs  part2.rs
rust/2023/day-01/: Cargo.toml
rust/2023/day-01/benches/: benchmarks.rs
rust/2023/day-01/src/: lib.rs  part1.rs  part1_jordankaye.rs  part2.rs  part2_jordankaye.rs
rust/2023/day-02/: Cargo.toml
rust/2023/day-02/src/: part1.rs
rust/2023/day-04/benches/: benchmarks-criterion.rs  benchmarks.rs
rust/2023/day-04/src/: lib.rs  part1.rs  part1_nom.rs  part2.rs  part2_nom.rs
rust/2023/day-05/: Cargo.toml
rust/2023/day-05/benches/: benchmarks.rs
rust/2023/day-05/src/: lib.rs  part1.rs  part2.rs  part2_par.rs
rust/2023/day-06/: Cargo.toml
rust/2023/day-06/src/: part1.rs  part2.rs
rust/2023/day-07/src/: part1.rs  part2.rs
rust/2023/day-08/src/: part1.rs  part2.rs
rust/2023/day-09/benches/: benchmarks.rs
rust/2023/day-09/src/: lib.rs  part1.rs  part2.rs
rust/2023/day-10/: Cargo.toml
rust/2023/day-10/benches/: benchmarks.rs
rust/2023/day-10/src/: part1_manual.rs  part2.rs
rust/2023/day-11/benches/: benchmarks.rs
rust/2023/day-11/src/: lib.rs  part1.rs  part1_manual.rs  part2.rs
rust/2023/day-12/benches/: benchmarks.rs
rust/2023/day-16/: Cargo.toml
rust/2023/day-17/: Cargo.toml
rust/2023/day-19/: Cargo.toml
rust/2023/day-20/: Cargo.toml
rust/2023/day-21/: Cargo.toml
rust/2023/day-22/: Cargo.toml
rust/2023/day-23/: Cargo.toml
rust/2023/day-24/: Cargo.toml
rust/2023/day-25/: Cargo.toml
rust/2024/: .gitignore  Cargo.toml  README.md  fetch.sh  justfile
rust/2024/daily-template/: Cargo.toml
rust/2024/daily-template/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
rust/2024/daily-template/src/: part1.rs  part2.rs
rust/2024/day01/: Cargo.toml
rust/2024/day01/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
rust/2024/day01/src/: part1.rs  part2.rs
rust/2024/day02/: Cargo.toml
rust/2024/day02/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
rust/2024/day02/src/: part1.rs  part2.rs
rust/2024/day03/: Cargo.toml
rust/2024/day03/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
rust/2024/day03/src/: part1.rs  part2.rs
rust/2024/day04/: Cargo.toml
rust/2024/day04/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
rust/2024/day04/src/: part1.rs  part2.rs
rust/2024/day05/: Cargo.toml
rust/2024/day05/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
rust/2024/day05/src/: part1.rs  part2.rs
rust/2024/day06/: Cargo.toml
rust/2024/day06/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
rust/2024/day06/src/: part1.rs  part2.rs
rust/2024/day07/: Cargo.toml
rust/2024/day07/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
rust/2024/day07/src/: part1.rs  part2.rs
rust/2024/day08/: Cargo.toml
rust/2024/day08/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
rust/2024/day08/src/: part1.rs  part2.rs
(+67 files in other folders)
