[workspace]
resolver = "2"
members = [
  "day*",
]
default-members = [
  "day*",
]

[workspace.dependencies]
itertools = "0.13"
hashbrown = "0.15"
rayon = "1.8.0"
rstest = "0.23.0"
divan = "0.1.16"
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0.3"
dhat = "0.3.2"
criterion = { version = "0.5.1", features = ["html_reports"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1
