[package]
name = "day01"
version = "0.1.0"
authors = ["Kirill 'horseinthesky' Pletnev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
miette.workspace = true
thiserror.workspace = true
hashbrown.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dhat.workspace = true

[dev-dependencies]
criterion.workspace = true
divan.workspace = true
rstest.workspace = true

[[bench]]
name = "day01-bench-divan"
path = "benches/benchmarks-divan.rs"
harness = false

[[bench]]
name = "day01-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
