[package]
name = "day04"
version = "0.1.0"
authors = ["Kirill 'horseinthesky' Pletnev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
miette.workspace = true
thiserror.workspace = true
hashbrown.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dhat.workspace = true
glam = "0.29.0"

[dev-dependencies]
criterion.workspace = true
rstest.workspace = true

[[bench]]
name = "day04-bench-divan"
path = "benches/benchmarks-divan.rs"
harness = false

[[bench]]
name = "day04-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
